kubernetes/apps/appsplatform/echo-server/app/authz.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: echo-server-gateway-custom
  namespace: appsplatform
spec:
  action: CUSTOM
  provider:
    name: authentik
  rules:
    - to:
        - operation:
            hosts:
              - echo-server2.selad.net
              - echo-server2.selad.net:*
